--- a/views/main.ejs
+++ b/views/main.ejs
@@ -109,9 +109,9 @@
                 </div>
               </div>
               <div class="form-group">
-                <label for="serialNumber" class="col-sm-2 control-label">Serial Number</label>
+                <label for="serialNumber" class="col-sm-2 control-label">Identifier (IMEI, S/N)</label>
                 <div class="col-sm-10">
-                  <input type="text" class="form-control" id="serialNumber" placeholder="Serial Number">
+                  <input type="text" class="form-control" id="serialNumber" placeholder="IMEI, Serial Number">
                 </div>
               </div>
               <div class="form-group">
